--- a/predef.html
+++ b/predef.html
@@ -15,7 +15,7 @@
     <div id ="MainBlock">
         <h2>RPDR US Seasons</h2>
         <div>
-            <button onclick="predefCast(us_season1, 'top3')">US Season 1</button>
+            <button onclick="predefCast(us_season1, 'top3')">US Season uno</button>
             <button onclick="predefCast(us_season2, 'top3')">US Season 2</button>
             <button onclick="predefCast(us_season3, 'top3')">US Season 3</button>
             <button onclick="predefCast(us_season4, 'top3')">US Season 4</button>
