--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="style" rel="stylesheet" href="css/style.light.css">
     <link rel="icon" href="image/favicon.ico">
-    <title>RuPaul's Drag Race Simulator</title>
+    <title>Simulador de Jorge</title>
 </head>
 <body>
     <h1 id="MainTitle">RuPaul's Drag Race Simulator!</h1>
