--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simulador de Jorge</title>
 </head>
 <body>
-    <h1 id="MainTitle">RuPaul's Drag Race Simulator!</h1>
+    <h1 id="MainTitle">Simulador de Jorge</h1>
     
     <div id="MainBlock">
         <p><big>Simulate a fictional Drag Race season and see what happens!</big></p>
