--- a/predef.html
+++ b/predef.html
@@ -69,6 +69,8 @@
             <button onclick="predefCast(international_as, 'all-stars')">All Stars International</button>
             <button onclick="predefCast(drdu, 'top3')">Drag Race Down Under</button>
             <button onclick="predefCast(dres, 'top3')">Drag Race España</button>
+            <button onclick="predefCast(lmd, 'top3')">LA MAS DRAGA</button>
+
         </div>
 
         <hr>
