--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <option value="porkchop">Porkchop Premiere</option>
         </select>
             
-        <p>Select your finale format: </p>
+        <p>Elige tu formato de final: </p>
         <select id="format">
             <option value="top3">Top 3 Format</option>
             <option value="top4">Lip-Sync For The Crown</option>
