--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="style" rel="stylesheet" href="css/style.light.css">
     <link rel="icon" href="image/favicon.ico">
-    <title>Simulador de Jorge y ya</title>
+    <title>Jorges simulator</title>
 </head>
 <body>
-    <h1 id="MainTitle">Simulador de Jorge y ya</h1>
+    <h1 id="MainTitle">SJorges simulator</h1>
     
     <div id="MainBlock">
         <p><big>Simulate a fictional Drag Race season and see what happens!</big></p>
