--- a/predef.html
+++ b/predef.html
@@ -69,7 +69,7 @@
             <button onclick="predefCast(international_as, 'all-stars')">All Stars International</button>
             <button onclick="predefCast(drdu, 'top3')">Drag Race Down Under</button>
             <button onclick="predefCast(dres, 'top3')">Drag Race España</button>
-            <button onclick="predefCast(lmd, 'top3')">LA MAS DRAGA</button>
+            <button onclick="predefCast('top4', 'porkchop')">La Mas Draga</button>
 
         </div>
 
